namespace DeliveryApp.BuildingBlocks.Domain.Abstractions;

public abstract class Entity
{
    public int Id { get; protected set; }
}
