namespace DeliveryApp.Domain.Enums;

public enum AppRole
{
    Customer = 0,
    Courier = 1,
    Admin = 2
}
