namespace DeliveryApp.Domain.Enums;

public enum VehicleType
{
    Bicycle,
    Motorbike,
    Car,
    ElectricScooter,
    Walking
}