namespace DeliveryApp.Modules.Payments.Domain.Enums;

public enum PaymentMethod
{
    CreditCard = 0,
    PayPal = 1,
    CashOnDelivery = 2,
    ApplePay = 3,
    GooglePay = 4
}
